--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,7 +125,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="?attr/colorPrimaryVariant"
+        android:backgroundTint="#547B55"
         android:text="Salvar contacto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +138,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="?attr/colorPrimaryDark"
+        android:backgroundTint="#547B55"
         android:text="Contactos salvados"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -162,6 +162,7 @@
         android:layout_width="57dp"
         android:layout_height="55dp"
         android:layout_marginTop="172dp"
+        android:backgroundTint="#547B55"
         android:text="@string/btnAgregarContacto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
