--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#00ACC1"
+            android:backgroundTint="#547B55"
             android:shadowColor="#1E88E5"
             android:text="ACTUALIZAR CONTACTOS"
             android:textAlignment="center"
@@ -88,7 +89,7 @@
         android:id="@+id/btnUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#00897B"
+        android:backgroundTint="#547B55"
         android:text="Actualizar contacto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
